# courseGenerationWithLangraphAndCrawl4ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  RapportProjectFinDetude.tex  docker-compose.yml  langgraph.json  pyproject.toml  start.sh
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: database.py  main.py
app/agents/course_generator/: formatter.py  mermaid.py  planner.py  query_builder.py  researcher.py  writer.py
app/agents/metadata/: agent.py  models.py  parser.py  prompt.py
app/agents/template/: agent.py  prompt.py  selector.py
app/api/: courseGeneration.py  docs.py  frontEndApis.py  health.py
app/db/: checkDbConection.py  chekes.py  coursDB.py  db_ops.py  templateDB.py
app/graphs/: course_graph.py  main_graph.py  metadata_graph.py  template_graph.py
app/models/: course.py  state.py  template.py
app/services/: llm.py
app/tools/: __init__.py  scraper.py  web_search.py
app/utils/: config.py  helpers.py  logger.py
docs/: documentation.html  documentation.md
frontend/: index.html
scriptes/: init_db.py  schema.sql  update_html.py
scriptes/Templates/: DatabaseDesign.json  GestiondesRessourcesHumaines.json  callCenterSpanish.json  default-Eng.json  default-francais.json  default-spanish.json  managment.json  programing.json  securiteDeEntreprise.json  securityInsideCompany.json
tests/: test_config_settings.py
tests/graphs/: test_graph_imports.py  test_main_graph_smoke.py
