[project]
name = "coursegenerationwithlangraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.8",
    "langgraph-supervisor>=0.0.31",
    "langsmith>=0.10.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
